2011-09-13  Armando Basile  <hmandevteam@gmail.com>

	* comex-gtk.csproj:
	* Properties/AssemblyInfo.cs:
	* Src/Gui_Classes/AboutDialogClass.cs:
	* Src/Gui_Classes/SettingsDialogClass.cs:
	* Src/Gui_Classes/MainWindowClass.Designer.cs: - glade widgets
	init to null value (removed warning on build on windows)

2011-09-12  Armando Basile  <hmandevteam@gmail.com>

	* readme:
	* comex-gtk.csproj:
	* Properties/AssemblyInfo.cs: - added license info in readme
	file
	- removed specific version reference to log4net and comex-base

2011-09-01  Armando Basile  <hmandevteam@gmail.com>

	* Resources/comex-gtk.desktop: - update icon reference

2011-09-01  Armando Basile  <hmandevteam@gmail.com>

	* comex-gtk.csproj: - added licence file to sources

2011-09-01  Armando Basile  <hmandevteam@gmail.com>

	* comex-gtk.csproj:
	* Resources/comex-gtk.desktop: - cleaning 

2011-08-28  Armando Basile  <hmandevteam@gmail.com>

	* Src/Gui_Classes/MainWindowClass.cs: 
	- fix: wrong reactor for send button
